--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QR Code Component</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <main class="container">
-        
+
     </main>
 </body>
 </html>
