Adding a central Block

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <main class="container">
-
+        <section class="mainBlock">
+        </section>
     </main>
 </body>
 </html>
