Adding images and text

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 <body>
     <main class="container">
         <section class="mainBlock">
+            <figure>
+                <img id="qrcode" src="./images/image-qr-code.png" alt="A cool qr code">
+            </figure>
+            <h1 id="mainText">Improve your front-end skills by building projects</h1>
+            <p id="secondText">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
         </section>
     </main>
 </body>
